# xray-vision

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: stb_image.h
src/: camera.cpp  camera.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  renderTarget.cpp  renderTarget.hpp  renderer.cpp  renderer.hpp
src/gl/: glObject.cpp  glObject.hpp  shaderUtils.cpp  shaderUtils.hpp
src/light/: directionalLight.cpp  directionalLight.hpp  light.cpp  light.hpp  pointLight.cpp  pointLight.hpp  spotLight.cpp  spotLight.hpp
src/material/: auraMaterial.cpp  auraMaterial.hpp  deferredMaterial.cpp  deferredMaterial.hpp  material.cpp  material.hpp  stencilMaterial.cpp  stencilMaterial.hpp
src/renderEffects/: auraCompositing.cpp  auraCompositing.hpp  deferredShading.cpp  deferredShading.hpp
